[gd_scene load_steps=3 format=3 uid="uid://87lxp4yojd7e"]

[ext_resource type="Script" uid="uid://sqlk2d166ao0" path="res://Scenes/Equation/equation.gd" id="1_8y8cr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8y8cr"]
size = Vector2(224, 105)

[node name="Equation" type="Area2D"]
script = ExtResource("1_8y8cr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8y8cr")

[node name="EquationLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -32.5
offset_right = 89.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "44 * 44"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="equation_selected" from="." to="." method="_on_clicked"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
